--- a/verl/trainer/config/sft_trainer.yaml
+++ b/verl/trainer/config/sft_trainer.yaml
@@ -15,6 +15,8 @@ data:
     messages_key: messages  # Key for messages list in multi-turn mode
   max_length: 1024
   truncation: error
+  filter_overlong_prompts: False 
+  shuffle: True
   balance_dp_token: False
   chat_template: null
   custom_cls:
