--- a/requirements_compliance.txt
+++ b/requirements_compliance.txt
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 accelerate==1.6.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.18
@@ -36,7 +35,6 @@ fastapi==0.115.12
 fastapi-cli==0.0.7
 fastrlock==0.8.3
 filelock==3.18.0
-flash_attn==2.7.4.post1
 frozenlist==1.6.0
 fsspec==2025.3.0
 gguf==0.10.0
@@ -77,6 +75,7 @@ nanobind==2.7.0
 nest-asyncio==1.6.0
 networkx==3.4.2
 ninja==1.11.1.4
+nltk==3.9.1
 numba==0.61.0
 numpy==2.1.3
 nvidia-cublas-cu12==12.4.5.8
@@ -139,6 +138,7 @@ rich-toolkit==0.14.5
 rpds-py==0.24.0
 rsa==4.9.1
 safetensors==0.5.3
+scikit-learn==1.7.2
 scipy==1.15.3
 sentencepiece==0.2.0
 sentry-sdk==2.27.0
@@ -167,7 +167,6 @@ tzdata==2025.2
 urllib3==2.4.0
 uvicorn==0.34.2
 uvloop==0.21.0
--e git+ssh://git@github.com/montehoover/verl.git@bc9062d74fc309833e2f353e5c5cf8053d6ec0eb#egg=verl
 virtualenv==20.31.2
 vllm==0.8.3
 wandb==0.19.11
@@ -179,29 +178,3 @@ xgrammar==0.1.17
 xxhash==3.5.0
 yarl==1.20.0
 zipp==3.21.0
-=======
-# requirements.txt records the full set of dependencies for development
-accelerate
-codetiming
-datasets
-dill
-flash-attn
-hydra-core
-liger-kernel
-numpy
-pandas
-peft
-pyarrow>=19.0.0
-pybind11
-pylatexenc
-pre-commit
-ray[default]
-tensordict<=0.6.2
-torchdata
-transformers
-# vllm==0.8.4
-wandb
-packaging>=20.0
-uvicorn
-fastapi
->>>>>>> 2ed63bbf39c22724e4940d97e4b09e4f3e5f6d68
